--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fdorigo</groupId>
 	<artifactId>igadmin</artifactId>
-	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>Illuminate Gym Admin</name>
-	<description></description>
+	<description>A web platform to manage clients of a gym. </description>
 	<!-- TODO <organization> <name>company name</name> <url>company url</url> 
 		</organization> -->
 	<licenses>
