--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.20</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
