--- a/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.properties
+++ b/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.properties
@@ -1,1 +1,3 @@
 form.addressState.null=Choose State
+form.compRate.MinimumValidator=Comp Rate must be greater than 0 and less than 100 but you entered ${input}
+form.compRate.MaximumValidator=Comp Rate must be greater than 0 and less than 100 but you entered ${input}
